fixing layout issues

--- a/src/components/Calculator.module.css
+++ b/src/components/Calculator.module.css
@@ -2,7 +2,7 @@
   margin: 3rem 2.4rem;
 }
 
-@media screen and (min-width: 490px) {
+@media screen and (min-width: 600px) {
   .calculator {
     width: 53.3rem;
   }
