--- a/src/components/Display.module.css
+++ b/src/components/Display.module.css
@@ -2,25 +2,36 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: right;
+  justify-content: center;
   background-color: darkblue;
   border-radius: 10px;
-  padding: 4rem 3.2rem 3.6rem;
+  padding: 2.9rem 2.4rem;
+  height: 8.8rem;
 }
 
 .display-output {
-  font-size: 5.6rem;
+  font-size: 4rem;
   letter-spacing: -0.93px;
   color: white;
 }
 
 .in-memory {
   color: white;
-  font-size: 2.5rem;
+  font-size: 1.8rem;
+  margin-bottom: 1.2rem;
 }
 
-@media screen and (min-width: 570px) {
+@media screen and (min-width: 490px) {
   .display {
     height: 12.8rem;
+  }
+
+  .display-output {
+    font-size: 5.6rem;
+  }
+
+  .in-memory {
+    font-size: 3.2rem;
+    margin-bottom: 1.5rem;
   }
 }
