--- a/src/components/Keyboard.module.css
+++ b/src/components/Keyboard.module.css
@@ -11,3 +11,9 @@
   grid-template-rows: repeat(5, 1fr);
   grid-template-columns: repeat(4, 1fr);
 }
+
+@media screen and (min-width: 490px) {
+  .grid {
+    gap: 2.4rem;
+  }
+}
